<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_Message">Hello World!!!</string>
    <!--string name="ButtonText">I\'m a button</string-->
    <string name="StringText">Here are my widgets</string>
    <string name="ButtonText">Button</string>
    <string name="Checkbox">Check this out</string>
    <string name="SwitchText">Switch on/off</string>
    <string name="editText">Type your answer here</string>
</resources>
