<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StringText"
        android:textAlignment="center"
        android:textSize="35sp"
        android:layout_alignParentTop="true"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:textSize="30sp"
        android:paddingLeft="15pt"
        android:paddingRight="15pt"
        android:layout_below="@id/textView"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/StringText"
        app:srcCompat="@drawable/flag"
        android:paddingLeft="5pt"
        android:paddingRight="5pt"
        android:layout_below="@id/textView"
        android:layout_toEndOf="@id/button"
        />
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Checkbox"
        android:textSize="25sp"
        android:layout_below="@id/imageView"/>
    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwitchText"
        android:textSize="25sp"
        android:paddingLeft="5pt"
        android:paddingRight="5pt"
        android:layout_below="@id/imageView"
        android:layout_toEndOf="@id/checkBox"/>
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="auto"
        android:inputType="textPersonName"
        android:hint="@string/editText"
        android:textSize="25sp"
        android:layout_below="@id/checkBox"
        android:autofillHints="" />
</RelativeLayout>